<resources>>
    <string name="app_name">Rankin_Final</string>
    <string name="action_settings">Settings</string>
    <string name="heading">Make your pizza!</string>
    <string name="button_text">MAKE PIZZA</string>

    <string name="check1">Bacon</string>
    <string name="check2">Canadian Bacon</string>
    <string name="check3">Lamb Bacon</string>
    <string name="check4">Turkey Bacon</string>
    <string name="switch_text">Gluten-Free</string>

    <string name="radio1">thin </string>
    <string name="radio2">thick </string>

    <string-array name="spinner">
        <item>small </item>
        <item>medium </item>
        <item>large </item>
        <item>monster </item>
    </string-array>

    <string name="toggle_on">red</string>
    <string name="toggle_off">white</string>

    <string name="namehint">pizza name</string>

</resources>
